--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -162,6 +162,8 @@ let groupBy = function(xs, key) {
   }, {});
 };
 
+
+
 // In the search interface, there are three types of input field. Some are text entry search field. These allow filtering 
 // based on string matching.  Date fields allow the entry of a four-digit start and end year number. Choice fields
 // allow search and selection from a dropdown of valid choices.
@@ -392,7 +394,7 @@ const update_searchSelect = searchSelect => {
     }
   }
 
-const buildQuery = () => {
+const getQueries = () => {
   // for each block
   let query = []
   let blocks = document.getElementById('filterBlocks')
@@ -433,9 +435,8 @@ const buildQuery = () => {
     
   }  
   return query
-  
-  // get query field and value 
-  // return an array of queries
+
+  // return an array of filter functions
 }
 
 function removeFilterBlock(id) {
@@ -580,7 +581,7 @@ function readFilterBlocks() {
   }
 }
 
-// initialize searchBlock
+// initialize searchBlock on page load
 const init_firstBlock = () => {
   addFilterBlock('and')
   const searchSelect = document.getElementById("searchSelect");
@@ -592,23 +593,51 @@ const init_firstBlock = () => {
 }
 init_firstBlock();
  
-const processQuery = query => {
-  console.log(query, query.searchField, query.searchValue, query.blockType, 'howdy!')
-  return {'result':[], 'type':query.blockType}
+const processQuery = (query, results) => {
+  // filter item_data, return  matching items
+  // for each item, apply condition 
+  let result = []
+  //build the condition 
+  for (i in queries){
+    // https://stackoverflow.com/questions/67068405/dynamically-create-a-condition-in-javascript
+  }
+
+  // 
+  for (const [key, value] of Object.entries(item_data)) {
+    if (value[query.searchField] === query.searchValue) {
+      result.push(item_data[key])
+    }
+  console.log(`${key}: ${value[query.searchField]}`);
+  }
+  //console.log(query, query.searchField, query.searchValue, query.blockType, 'howdy!')
+  return {'result':result, 'type':query.blockType}
 }
 
+
 const search = () => {
+  /* Filter the items and update results for each query block
+   should have same results as comparable SQL query 
+    case 1: Title("Hamlet") && Theater("Globe") && Theater("Swan") = None
+    case 2: Title("Hamlet") && Theater("Globe") || Theater("Swan")
+  */
   table.clear();
   results = []
+  types = []
+  let queries = getQueries()
+  let results = processQueries(queries)
+  // check if a type appears more than once
+  // if not, then just chain filters and reduce
+  // if yes, chain reduce, then join 
 
-  let queries = buildQuery()
   for (i in queries){
-    let { result, type } = processQuery(queries[i])
+    let { result, type } = processQuery(queries[i], results)
     if (type === 'AND') {
-      // intersection of results and query result, elements common to both results and query result
+      // intersection (a ∩ b) of results and query result, elements common to both results and query result
+      results = results.filter(function(e) { return result.indexOf(e) > -1; });
     }
     if (type === 'OR') {
-      // union of results and query result, all elements in either results or query result
+      // union (a ∪ b) of results and query result, all elements in either results or query result
+      results = [...new Set([...results, ...result])]
     }
 
   }
